# TFM

./: Cargo.toml  README.md  generator_of_Zps.py  lemma_primes.py  test.json
src/: main.rs
