[package]
name = "KU08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
prime-checker = "0.2.21"
ilog = "1.0.1"
itertools = "0.12.1"
num-bigint = "0.4.4"
num-traits = "0.2.18"
polynomen = "1.1.0"
struson = "0.5.0"
memuse = "0.2.1"